# netsniff

./: Cargo.toml  Makefile  README.md  sniff.yaml
sniff/: Cargo.toml  build.rs
sniff-common/: Cargo.toml
sniff-common/src/: lib.rs
sniff-ebpf/: Cargo.toml
sniff-ebpf/src/: main.rs  map.rs  sniff.rs  util.rs
sniff/src/: app.rs  cidr.rs  cmd.rs  collector.rs  config.rs  ebpf.rs  filter.rs  lib.rs  main.rs  metrics.rs  network.rs
