[workspace]
resolver = "2"
members = ["sniff", "sniff-common", "sniff-ebpf"]
default-members = ["sniff", "sniff-common"]

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
prometheus = { version = "0.13.4" }
clap = { version = "4.5.20", default-features = true }
env_logger = { version = "0.11.5" }
libc = { version = "0.2" }
log = { version = "0.4.22" }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.sniff-ebpf]
debug = 2
codegen-units = 1
