[package]
name = "sniff-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
sniff-common = { path = "../sniff-common" }
network-types = {version = "0.0.7"}
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "netsniff"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
