[package]
name = "sniff"
version = "0.1.0"
edition = "2021"

[dependencies]
sniff-common = { path = "../sniff-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
ipnetwork = { version = "0.21.1" }
chrono = { version = "0.4.39" }
colored = { version = "3.0.0" }
network-types = { version = "0.0.7" }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
sniff-ebpf = { path = "../sniff-ebpf" }

[[bin]]
name = "sniff"
path = "src/main.rs"
